# mmo

./: .gitignore  README.md  docker-compose.yml  opencode.json
godot/: exported_obstacles.json  exported_spawn_points.json  mmo.gdextension  mmo.gdextension.uid  project.godot  shot.png.import
godot/scenes/: main.tscn
godot/scripts/: animation_controller.gd  animation_controller.gd.uid  camera_controller.gd  camera_controller.gd.uid  click_movement_controller.gd  click_movement_controller.gd.uid  combat_controller.gd  combat_controller.gd.uid  cursor_manager.gd  cursor_manager.gd.uid  day_night_controller.gd  day_night_controller.gd.uid  death_controller.gd  death_controller.gd.uid  enemy_animation_controller.gd  enemy_animation_controller.gd.uid  enemy_model.gd  enemy_model.gd.uid  game_manager.gd  game_manager.gd.uid  (+16 more)
rust/: Cargo.toml
server/: Cargo.toml  obstacles.json  spawn_areas.json  spawn_points.json
server/heightmaps/: jinno_heightmap.json  shinsoo_heightmap.json
server/migrations/: 001_initial_schema.sql  002_characters.sql  003_items_and_equipment.sql  004_zones.sql  005_teleport_ring.sql  006_weapon_visuals.sql  007_admin_and_currency.sql  008_npc_spawns.sql  009_armor_items.sql  010_extended_equipment_slots.sql
server/src/: commands.rs  main.rs
server/src/entities/: enemy.rs  item.rs  mod.rs  npc.rs  player.rs
server/src/navigation/: mod.rs
server/src/network/: mod.rs  server.rs
server/src/persistence/: cache.rs  database.rs  mod.rs
server/src/world/: heightmap.rs  mod.rs  spawn_area.rs  zone_manager.rs
shared/: Cargo.toml
(+2188 files in other folders)
