[package]
name = "mmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mmo-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Password hashing
argon2 = "0.5"

# Async utilities
futures = "0.3"
